--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,5 +1,6 @@
 extends index
 block content
+  link(href="https://cdn.jsdelivr.net/gh/tretapey/raisincss@1.1.0/raisin.min.css" rel="stylesheet")
   .navBar.navBar_container
     .navBar.navBar__logo Pikagram
     .navBar.navBar__iconsContainer
