--- a/assets/stylesheets/navbar.css
+++ b/assets/stylesheets/navbar.css
@@ -15,6 +15,8 @@
   padding: 0 20px 7px;
   border-bottom: 1px solid rgba(219,219,219);
   background-color: rgba(255,255,255);
+  position: fixed;
+  width: 100vw;
 }
 
 .navBar__iconsContainer{
