fix likes functionality

--- a/views/home.pug
+++ b/views/home.pug
@@ -3,22 +3,22 @@ block content
   include navbar
   .mainBoxHome
     .postsContainer
-    .myProfile link to my profile its really long to  here
+    .myProfile link to my profile its really long to here
     .suggestionHeader suggested users
     .profile1 geoff the great
-    .icon1 O
+    .icon1 
     .followStatus1 FOLLOW
     .profile2 ted the terrible
-    .icon2 O
+    .icon2 
     .followStatus2 FOLLOW
     .profile3 devin the destroyer
-    .icon3 O
+    .icon3 
     .followStatus3 FOLLOW
     .profile4 ang the arbiter 
-    .icon4 O
+    .icon4 
     .followStatus4 FOLLOW
     .profile5 kejin the creator
-    .icon5 O
+    .icon5
     .followStatus5 FOLLOW
     include footer
     script(src="/staticJs/home.js" type="module")
