--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -3,18 +3,27 @@ block content
   .navBar.navBar_container
     .navBar.navBar__logo Pikagram
     .navBar.navBar__iconsContainer
-      img.navBar.navBar__icons.navBar__addPost(src="/staticIcons/jigglypuff.svg")
+      img.navBar.navBar__icons.navBar__addPost#myBtn(src="/staticIcons/jigglypuff.svg")
       img.navBar.navBar__icons.navBar__homepage(src="/staticIcons/star.svg")
       img.navBar.navBar__icons.navBar__team(src="/staticIcons/smartphone.svg")
       img.navBar.navBar__icons.navBar__profile(src="/staticIcons/pikachu.svg")
-  .addPostContainer.addPostContainer--hidden
-    h1 Add Post
-    form.addPicForm(action="/image" method="post") 
-      label(for ="picture") Upload Picture
-      input.file(type="file")
-      label(for="caption") Caption
-      input.caption(type="text")
-      button.formSubmit(type="submit") Add Post 
+  //- .addPostContainer.addPostContainer--hidden
+  //-   h1 Add Post
+  //-   form.addPicForm(action="/image" method="post")
+  //-     label(for ="picture") Upload Picture
+  //-     input.file(type="file")
+  //-     label(for="caption") Caption
+  //-     input.caption(type="text")
+  //-     button.formSubmit(type="submit") Add Post
+  .modal#myModal
+    .modal-content
+      span.close &times;
+      h1#make-a-post Make a Post
+      form(method='post', enctype='multipart/form-data')
+        input(type='file', name='fileUpload' accept="image/*" )
+        input(type="text", name='fileCaption', placeholder="hello")
+        input(type='button', name='fileSend' value="submit")
+      script(src="staticJs/post-pic.js" type="module")
 
 
   script(src="/staticJs/navbar.js")
