--- a/assets/stylesheets/footer.css
+++ b/assets/stylesheets/footer.css
@@ -1,9 +1,13 @@
-.footer {
+.footer{
   position: absolute;
   bottom: 10px;
+  width:100%;
+  
+}
+
+.footer__links {
   display: flex;
   flex-direction: row;
-  width:100%;
   justify-content: center;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
   font-size: 12px;
