--- a/assets/stylesheets/home/posts.css
+++ b/assets/stylesheets/home/posts.css
@@ -1,8 +1,21 @@
+body{
+  position: relative;
+}
+.individualPostCaption{padding-left: 10px; font-weight: 800; padding-top: 6px;}
+.author{font-weight: 800; font-size: 12px;; padding-top: 10px;}
+main{
+  /* position: relative; */
+  min-height: 100vh;
+}
 .addLike{
   height: 20px;
 }
 
-.mainBoxHome { padding-top: 90px; padding-left: 50px;}
+.mainBoxHome { 
+  /* position: relative; */
+  padding-top: 90px;
+  padding-left: 50px;
+  }
 
 .mainFeed__postPhoto{
   width: 580px;
@@ -28,22 +41,28 @@
   width: 500px;
 }
 
-<<<<<<< HEAD
 .mainFeed__profilePhotoContainer{
-  border: 1px solid black;
+  border: 1px solid gray;
   border-radius: 50%;
   width: 60px;
-  height: 60px
+  height: 60px;
+  margin-left: 10px;
+  margin-top: 10px;
+
 }
 
 .mainFeed__profilePhoto {
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
-  position: relative;
+  /* position: relative; */
   overflow:visible;
   top: -20px;
   left: -17px;
-  z-index: -1
-=======
+  z-index: -1;
+  
+
+}
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -61,11 +80,17 @@
 
 /* Modal Content */
 .modal-content {
+  /* align-self: flex-start; */
+  position: absolute;
+  top:80px;
+  right:100px;
   background-color: #fefefe;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 190px;
+  color: white;
+  border-radius: 22px;
 }
 
 /* The Close Button */
@@ -74,6 +99,7 @@
   float: right;
   font-size: 28px;
   font-weight: bold;
+  
 }
 
 .close:hover,
@@ -84,7 +110,104 @@
 }
 
 #make-a-post{
-  font-weight: bold;
-  margin: 5px;
->>>>>>> 2d390d81df1a0c399727bd2c7ff1c13e0785cb8d
+  position: fixed;
+  padding-left: 48px;
+  padding-bottom: 20px;
+  font-weight: 600;
+  height: 16px;
+  color: gray;
+  text-align: center;
+}
+.modal__container{display: flex;flex-direction: column;margin: 10px;padding: 10px; align-items: flex-start;}
+
+.modal__button, .modal__select {
+  text-align: center;
+  height: 30px;
+  font-size: 14px;
+  font-weight: 600;
+  color: white;
+  border-radius: 5px;
+  width: 80px;
+  box-sizing: border-box;
+  border: transparent;
+  background-color: rgba(0, 149, 246, 1);
+  cursor: pointer;
+  white-space: nowrap;
+  outline-width: 0;
+  width: 150px;
+  box-sizing: border-box;
+}
+
+.modal__caption {
+  text-align: center;
+  height: 30px;
+  font-size: 12px;
+
+  color: rgb(38,38,38);
+  width: 150px;
+  border: none;
+  background-color: transparent;
+  outline-width: 0;
+
+  border: 1px solid rgb(219, 219, 219);
+  border-radius: 3px;
+  background-color: rgb(250,250,250);
+  color: rgba(38,38,38);
+  box-sizing: border-box;
+
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 150px;
+}
+
+
+.file {
+  position: relative;
+  height: 30px;
+  width: 100px;
+  
+}
+
+.file > input[type="file"] {
+  text-align: center;
+  height: 30px;
+  font-size: 14px;
+  font-weight: 600;
+  color: white;
+  border-radius: 5px;
+  width: 80px;
+  box-sizing: border-box;
+  border: transparent;
+  background-color: rgba(0, 149, 246, 1);
+  cursor: pointer;
+  white-space: nowrap;
+  outline-width: 0;
+  width: 150px;
+  box-sizing: border-box;
+}
+
+.file > label {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #666;
+  color: #fff;
+  border-radius: 5px;
+  line-height: 30px;
+  text-align: center;
+  cursor: pointer;
+
+  text-align: center;
+  height: 30px;
+  font-size: 14px;
+  font-weight: 600;
+  color: white;
+  border-radius: 5px;
+  box-sizing: border-box;
+  border: transparent;
+  background-color: rgba(0, 149, 246, 1);
+  width: 150px;
+  box-sizing: border-box;
 }
