--- a/assets/stylesheets/profile/profile.css
+++ b/assets/stylesheets/profile/profile.css
@@ -1,8 +1,16 @@
+.bodyContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .profileContainerDiv {
+  position: absolute;
+  top: 45px;
   padding:20px;
   display: grid;
   grid-template-columns: 1fr 350px 15px 600px 1fr;
-  grid-template-rows:  140px 50px 50px 50px 1fr;
+  grid-template-rows:  75px 75px 75px 50px 1fr;
   grid-template-areas: 
   ". pic . username  ." 
   ". pic . stats ."
@@ -11,11 +19,15 @@
   ". posts posts posts .";
 }
 .profilePic{
-  grid-area: pic;
   width: 200px;
   height: 200px;
   border-radius: 300px;
+}
+.pictureContainer{
+  grid-area: pic;
   display: flex;
+  align-self: center;
+  justify-content: center;
 }
 .usernameContainer{
   grid-area: username;
