--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -23,6 +23,6 @@ block content
           label(for="file-input") Pick a file
           input.modal__select(type='file', id="file-input" name='fileUpload' accept="image/*" )
         input.modal__caption(type="text", name='fileCaption', placeholder="caption please")
-        input.modal__button(type='button', name='fileSend' value="submit")
+        input.modal__button(type='button', class="fileSend", name='fileSend' value="submit")
       script(src="staticJs/post-pic.js" type="module")
   script(src="/staticJs/navbar.js")
