--- a/assets/stylesheets/profile/profile.css
+++ b/assets/stylesheets/profile/profile.css
@@ -5,63 +5,102 @@
 }
 
 .profileContainerDiv {
+  margin-top: 25px;
   position: absolute;
   top: 45px;
   padding:20px;
   display: grid;
   grid-template-columns: 1fr 350px 15px 600px 1fr;
-  grid-template-rows:  75px 75px 75px 50px 1fr;
-  grid-template-areas: 
-  ". pic . username  ." 
+  grid-template-rows:  60px 60px 60px 1fr;
+  grid-template-areas:
+  ". pic . username  ."
   ". pic . stats ."
-  ". pic . fullname ."
   ". pic . bio ."
   ". posts posts posts .";
 }
 .profilePic{
-  width: 200px;
-  height: 200px;
-  border-radius: 300px;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
-.pictureContainer{
+.outerPictureContainer{
   grid-area: pic;
   display: flex;
   align-self: center;
   justify-content: center;
 }
+
+.pictureContainer{
+  height: 180px;
+  width: 180px;
+}
 .usernameContainer{
   grid-area: username;
   display: flex;
-  justify-content: space-between;
+}
+
+.username{
+  font-size: xxx-large;
+  font-weight: 100;
+  padding-right: 10px;
 }
 .fullName{ grid-area: fullname;}
 
-.postsContainer{ 
+.postsContainer{
+  margin-top: 50px;
+  margin-right: 0px;
   grid-area: posts;
   display: flex;
 }
 
-.bio{ grid-area: bio;}
-.statsContainer{ 
+.profileContainer{
+   grid-area: bio;
+}
+
+.statsContainer{
   grid-area: stats;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
 }
 
 .statsContainer > div{
   display: flex;
 }
 .statsContainer > div > div{
-  padding: 20px;
+  padding: 3px;
+}
+
+.numPostsContainer, .numFollowersContainer, .numFollowingContainer{
+  margin-right: 20px;
+}
+
+.numPosts, .numFollowers, .numFollowing{
+  font-weight: 600;
+}
+
+.profileContainer__button{
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
 }
 
 .editProfile{
+  font-weight: 500;
   width: 100px;
   height: 30px;
 }
 
+.fullName{
+  font-weight: 500;
+  padding-bottom: 5px;
+}
+
+.bio{
+  padding-top: 5px;
+}
 
 .profileIndividiualPost > img{
   height: 295px;
   width: 295px;
+  margin: 9px 9px;
 }
