--- a/views/edit-profile.pug
+++ b/views/edit-profile.pug
@@ -1,30 +1,33 @@
 extends index
 block content
   include navbar
-  .editProfileContainer
-    .changePassword Change Password
-    .editProfile Edit Profile
-    .editProfile__profileInfo
-      img.editProfile__profilePic(src= "/" alt="profile pic")
-      div.editProfile__username
-    form.editProfileForm(method="post")
-      .editProfile__nameContainer
-        label(for="name") Name
-        input.editProfileName(type="text" name="name")
-      .editProfile__usernameContainer
-        label(for="username") Username
-        input.editProfileUsername(type="text" name="username")
-      .editProfile__bioContainer
-        label(for="bio") Bio
-        input.editProfileBio(type="text" name="bio")
-      .editProfile__emailContainer
-        label(for="email") Email
-        input.editProfileEmail(type="text" namee="email")
-      .editProfile__ageContainer
-        label(for="age") Age
-        input.editProfileAge(type="text" namee="age")
-      .editProfile__genderContainer 
-        label(for="gender") Gender
-        input.editProfileGender(type="text" name="gender")
-      button.editProfileSubmit(type="submit") Submit
-    script(src="/staticJs/edit-profile.js" type="module")
+    .editProfileFlex
+      .editProfileContainer
+        .profilePicContainer
+          .editProfile__profilePic
+            img#profilePic(src= "/" alt="profile pic")
+          .editProfile__editUser
+            div.editProfile__username
+            .editProfile__changePic
+              a(href='/accounts/edit') Change Profile Photo
+        form.editProfileForm(method="post")
+          .editProfile__nameContainer
+            label.name(for="name") Name
+            input.editProfileName(type="text" name="name")
+          .editProfile__usernameContainer
+            label.usernameLabel(for="username") Username
+            input.editProfileUsername(type="text" name="username")
+          .editProfile__bioContainer
+            label.bio(for="bio") Bio
+            textarea.editProfileBio(type="text" name="bio")
+          .editProfile__emailContainer
+            label.email(for="email") Email
+            input.editProfileEmail(type="text" namee="email")
+          .editProfile__ageContainer
+            label.age(for="age") Age
+            input.editProfileAge(type="text" namee="age")
+          .editProfile__genderContainer
+            label.gender(for="gender") Gender
+            input.editProfileGender(type="text" name="gender")
+          button.editProfileSubmit(type="submit") Submit
+      script(src="/staticJs/edit-profile.js" type="module")
