--- a/views/home.pug
+++ b/views/home.pug
@@ -3,20 +3,20 @@ block content
     include navbar
     .mainBoxHome
       .postsContainer
-      .suggestionHeader suggested users
-      .profile1 geoff the great
-      .icon1 
-      .followStatus1 FOLLOW
-      .profile2 ted the terrible
-      .icon2 
-      .followStatus2 FOLLOW
-      .profile3 devin the destroyer
-      .icon3 
-      .followStatus3 FOLLOW
-      .profile4 ang the arbiter 
-      .icon4 
-      .followStatus4 FOLLOW
-      .profile5 kejin the creator
-      .icon5
-      .followStatus5 FOLLOW
+      //- .suggestionHeader suggested users
+      //- .profile1 geoff the great
+      //- .icon1
+      //- .followStatus1 FOLLOW
+      //- .profile2 ted the terrible
+      //- .icon2
+      //- .followStatus2 FOLLOW
+      //- .profile3 devin the destroyer
+      //- .icon3
+      //- .followStatus3 FOLLOW
+      //- .profile4 ang the arbiter
+      //- .icon4
+      //- .followStatus4 FOLLOW
+      //- .profile5 kejin the creator
+      //- .icon5
+      //- .followStatus5 FOLLOW
     script(src="/staticJs/home.js" type="module")
