--- a/assets/stylesheets/change-password/change-password.css
+++ b/assets/stylesheets/change-password/change-password.css
@@ -1,54 +1,60 @@
-.changePasswordContainer {
-  padding:20px;
+colorschoeme.changePasswordContainer {
+  padding: 20px;
   display: grid;
   grid-template-columns: 1fr 200px 15px 600px 1fr;
-  grid-template-rows:  80px 80px;
-  grid-template-areas: 
-  ". editprofile . profile ." 
-  ". changepassword . profile ."
-  ". . . form ."
+  grid-template-rows: 80px 80px;
+  grid-template-areas:
+    ". editprofile . profile ."
+    ". changepassword . profile ."
+    ". . . form ."
 }
-.editProfile{
+
+.editProfile {
   grid-area: editprofile;
 }
 
-.changePassword{
+.changePassword {
   grid-area: changepassword;
 }
 
-.changePasswordContainer > .changePassword{ border-left: 2px solid black;}
+.changePasswordContainer>.changePassword {
+  border-left: 2px solid black;
+}
 
-.changePasswordForm{
+.changePasswordForm {
   grid-area: form;
   display: grid;
   grid-template-rows: 100px 100px 100px;
-  grid-template-areas:"oldPassword" "newPassword" "confirmPassword";
+  grid-template-areas: "oldPassword""newPassword""confirmPassword";
 }
 
-.changePasswordForm input{
+.changePasswordForm input {
   width: 350px;
   height: 33px;
 }
 
-.changePassword__oldPasswordContainer{
+.changePassword__oldPasswordContainer {
   grid-area: oldPassword;
   display: flex;
   justify-content: space-between;
 }
-.changePassword__newPasswordContainer{
+
+.changePassword__newPasswordContainer {
   grid-area: newPassword;
   display: flex;
   justify-content: space-between;
 }
-.changePassword__confirmPasswordContainer{
+
+.changePassword__confirmPasswordContainer {
   grid-area: confirmPassword;
   display: flex;
   justify-content: space-between;
 }
-.changePasswordSubmit{
+
+.changePasswordSubmit {
   grid-area: submit;
   display: flex;
   justify-content: space-between;
-  width:  80px;
+  width: 80px;
   height: 33px;
 }
